# Technological-foundations-of-the-Internet-of-Things-5-semester-Mirea

./: Шаблон.dotx
ПР1-4/: ПР4.docx
ПР5-9/: pic8.docx  ПР7.docx  ПР8.docx
ПР5-9/MQTTReader/: .gitignore  activate.bat  data-10-11-2025-ver2.json  data-20-10-2025-ver3.json  get_data_v3.py  main.py  plot_sensor_data.py  plot_sensor_data2.py  pyproject.toml
ПР5-9/MQTTReader/WB_demo_kit_v2/: SensorReading2.py  get_data.py  plot_sensor_data2.py
ПР5-9/MQTTReader/WB_demo_kit_v3/: SensorReading3.py  console_print.py  plot_sensor_data.py
