[project]
name = "MQTTReader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4", # требуется для визуализации для 8 практической работы
    "numpy>=2.0.2", # требуется для визуализации для 8 практической работы
    "paho-mqtt>=2.1.0", # требуется для работы с api WB-demo-kit
    "pandas>=2.3.3", # требуется для визуализации для 8 практической работы
    "pydantic>=2.12.4", # требуется для валидации данных, и их сериализации и десериализации
    "rich>=14.2.0", # требуется для красивого консольного отображения
]
